# pyo3-async-gen

./: Justfile  pyproject.toml  scratch.py
pyo3-async-gen/: Cargo.toml  pyproject.toml
pyo3-async-gen/python/pyo3_async_gen/: __init__.py  _internal.pyi
pyo3-async-gen/src/: lib.rs
