[project]
name = "pyo3-async-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyo3-async-gen",
]

[tool.uv]
dev-dependencies = [
    "maturin>=1.7.1",
    "pytest>=8.3.3",
]

[tool.uv.sources]
pyo3-async-gen = { workspace = true }
