[package]
name = "pyo3-async-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_async_gen"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21"
pyo3-asyncio-0-21 = { version = "0.21", features = ["tokio-runtime"] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
